Added a 'PRINT USR c,b;' style bank loader code. First try, not really tested.
Signed-off-by: Jouni Korhonen <mouho@iki.fi>

--- a/pasmo/pasmodoc.html
+++ b/pasmo/pasmodoc.html
@@ -1487,7 +1487,7 @@ More suggestions about that are wellcome.
 
 <h2><a name="contributions">Contributions</a>.</h2>
 <p>
- (c) 2018 <a href="mailto:jouni.korhonen@iki.fi">Jouni Korhonen</a> (version 0.5.4.beta3):
+ (c) 2018-9 <a href="mailto:jouni.korhonen@iki.fi">Jouni Korhonen</a> (version 0.5.4.beta4):
  <ul>
    <li>Added BANKed memory support, related directives and command line options. 
    <li>Added STRUCT/ENDS support and related directives. 
