Added SNA 128K file generation support.
Signed-off-by: Jouni Korhonen <mouho@iki.fi>

--- a/pasmo/pasmodoc.html
+++ b/pasmo/pasmodoc.html
@@ -367,6 +367,17 @@ Generate the object file in SNA format.
 Generate the object file in SNA 128K format. If not banking has been used the output revets back to SNA format.
 </dd>
 
+<dt>--usr0</dt>
+<dd>
+Controls the SNA 128K port $7ffd ROM paging. Default is ZX Spectrum 128K ROM and --usr0 selects ZX
+Spectrum 48K Basic ROM. 
+</dd>
+
+<dt>--trdos</dt>
+<dd>
+Controls the SNA 128K TR-DOS ROM paging. --trdos pages in the TR-DOS ROM. 
+</dd>
+
 <dt>--public</dt>
 <dd>
 Only the public symbols table is generated, using the file.symbol name,
@@ -425,6 +436,7 @@ assembler syntax.
 Dumps the paged memory map information and details of all banks.
 </dd>
 </dl>
+
 
 <p>
 When no option for code generation is specified, --bin is used by
@@ -593,13 +605,14 @@ Generate the object file with header for use with BLOAD in MSX Basic.
 <h3><a name="codegensna">--sna mode</a></h3>
 
 <p>
-With the --sna option a .TBD
+With the --sna option generate an object file in SNA format.
 </p>
 
 <h3><a name="codegensna128">--sna128 mode</a></h3>
 
 <p>
-With the --sna128 option a .TBD
+With the --sna128 option generate an object file in SNA 128K format. If not banking has been used the output revets back to SNA format.
+
 </p>
 
 <h3><a name="codegensymbol">Symbol table</a></h3>
@@ -1522,12 +1535,13 @@ More suggestions about that are wellcome.
 
 <h2><a name="contributions">Contributions</a>.</h2>
 <p>
- (c) 2018-9 <a href="mailto:jouni.korhonen@iki.fi">Jouni Korhonen</a> (version 0.5.4.beta4):
+ (c) 2018-9 <a href="mailto:jouni.korhonen@iki.fi">Jouni Korhonen</a> (version 0.5.4.beta6.paged):
  <ul>
    <li>Added BANKed memory support, related directives and command line options. 
    <li>Added STRUCT/ENDS support and related directives. 
    <li>Added DUP/EDUP support. 
    <li>Modified IX and IY index calculations, see <a href="#bugs">Bugs</a>. 
+   <li>Added SNA 128K code generation support.
    </li>
  </ul>
 </p>
